operator/pkg/gateway-api/testdata/gateway/gateway-tls-options/output/httproute-tls-13-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-13-route
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  hostnames:
    - two.example.test
  parentRefs:
    - name: gateway-tls-options
      sectionName: tls-13
  rules:
    - backendRefs:
        - name: infra-backend-v2
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2026-09-24T08:36:40Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-09-24T08:36:40Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: gateway-tls-options
        sectionName: tls-13
